--- a/src/app/status-bar/status-bar.component.css
+++ b/src/app/status-bar/status-bar.component.css
@@ -1,30 +1,97 @@
 @font-face {
-  src: url(assets/PKMNRSEU.FON);
+  font-family: "Pokemon";
+  font-style: normal;
+  font-weight: normal;
+  src: local('Pokemon Fire Red Regular'), url('../../assets/pokemon_fire_red.woff') format('woff');
 }
+
 .lifebar {
   position: absolute;
   top: 200px;
   left: 200px;
-  max-width: 13%;
+  max-width: 200px;
   height:auto ;
 }
+
 .lifebar-enemy {
   position: absolute;
   left:0px;
   top: 50px;
-  max-width: 13%;
+  max-width: 200px;
   height:auto ;
+}
+
+.black-enemy{
+  position: absolute;
+  width: 77px;
+  height: 25px;
+  background-color: black;
+  left: 63px;
+  top: 70px;
+}
+
+.black-you{
+  position: absolute;
+  width: 160px;
+  height: 40px;
+  background-color: black;
+  top: 210px;
+  left: 230px;
+}
+
+.hp-enemy{
+  position: absolute;
+  width: 100px;
+  height: 25px;
+  background-color: green;
+  left: 75px;
+  top: 70px;
+  opacity: 1;
+}
+
+.hp-you{
+  position: absolute;
+  height: 40px;
+  background-color: green;
+  top: 210px;
+  left: 290px;
+  width:97px;
 }
 
 .level{
-  font-size:11px;
-  font-weight: bold;
+  font-size:15px;
   position: absolute;
-  top: 207px;
-  left: 340px;
-  max-width: 13%;
+  top: 210px;
+  left: 374px;
   height:auto ;
+  font-family: "Pokemon";
 }
 
+.level-enemy{
+  font-size: 15px;
+  position: absolute;
+  max-width: 10%;
+  top: 60px;
+  left: 160px;
+  height: 40px;
+  font-family: "Pokemon";
+}
 
+.pokemon-name{
+  font-size:15px;
+  position: absolute;
+  top: 210px;
+  left: 240px;
+  max-width: 10%;
+  height:auto ;
+  font-family: "Pokemon";
+}
 
+.pokemon-name-enemy{
+  font-size: 15px;
+  position: absolute;
+  top: 55px;
+  left: 30px;
+  height: 40px;
+  font-family: "Pokemon";
+}
