--- a/src/app/pokemon-selection/pokemon-selection.component.css
+++ b/src/app/pokemon-selection/pokemon-selection.component.css
@@ -10,6 +10,7 @@
   position: absolute;
   left: 50%;
   top: 50%;
+  transform: translate(-50%, -50%);
   z-index: 1;
   height: 100px;
   width: 100px;
@@ -63,5 +64,3 @@
   width: 50px;
   height: 50px
 }
-
-
